// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`a Dynatrace DynaKube instance required only 1`] = `
[
  {
    "apiVersion": "dynatrace.com/v1beta3",
    "kind": "DynaKube",
    "metadata": {
      "name": "dynakube",
    },
    "spec": {
      "activeGate": {
        "capabilities": [
          "kubernetes-monitoring",
        ],
        "resources": {
          "limits": {
            "cpu": "1000m",
            "memory": "1.5Gi",
          },
          "requests": {
            "cpu": "500m",
            "memory": "512Mi",
          },
        },
      },
      "apiUrl": "https://ENVIRONMENTID.live.dynatrace.com/api",
      "metadataEnrichment": {
        "enabled": true,
      },
    },
  },
]
`;

exports[`a Dynatrace DynaKube instance with platform monitoring configuration 1`] = `
[
  {
    "apiVersion": "dynatrace.com/v1beta3",
    "kind": "DynaKube",
    "metadata": {
      "annotations": {
        "feature.dynatrace.com/k8s-app-enabled": "true",
      },
      "name": "dynakube",
    },
    "spec": {
      "activeGate": {
        "capabilities": [
          "kubernetes-monitoring",
        ],
        "resources": {
          "limits": {
            "cpu": "1000m",
            "memory": "1.5Gi",
          },
          "requests": {
            "cpu": "500m",
            "memory": "512Mi",
          },
        },
      },
      "apiUrl": "https://ENVIRONMENTID.live.dynatrace.com/api",
      "metadataEnrichment": {
        "enabled": true,
      },
    },
  },
]
`;
